# dapr-agents

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  TODOs.md  dapr-python-sdk.txt  dapr_agents_examples_flat  dapr_agents_flat  dapr_agents_tool_calling_integration.md  dev-requirements.txt  index.html  mkdocs.yml  mypy.ini  pyproject.toml  python_sdk_tool_calling_implementation.md  requirements-dev-local.txt  requirements-test-local.txt  requirements.txt  setup-local-dev.sh  setup.cfg  setup.py  sitemap.xml  start_dapr.sh  test-requirements.txt  tool_calling_design.md  tox.ini
.devcontainer/: post-create.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: new-content-needed.md
.github/scripts/: dapr_bot.js
.github/workflows/: build.yaml  ci-e2e-ollama.yaml  dapr-bot-schedule.yml  docs.yml  e2e-tests.yaml  integration-tests.yaml  release.yml  schema-compat-comment.yaml
components/: anthropic-conversation.yaml  conversationstore.yaml  dapr-config.yaml  echo-tool-calling.yaml  gemini-conversation.yaml  google-conversation.yaml  openai-conversation.yaml  redis-pubsub.yaml  redis-statestore.yaml  registrystatestore.yaml
components/cli-compatible/: echo-conversation.yaml  echo-tools.yaml
concepts/agents/: index.html
concepts/arxiv_fetcher/: index.html
concepts/messaging/: index.html
concepts/text_splitter/: index.html
cookbook/: arxiv_search.ipynb
cookbook/agents/: basic_oai_agent_react.ipynb
cookbook/executors/: local.ipynb
cookbook/graphstores/: neo4j_basic_examples.ipynb
cookbook/llm/: azure_openai_chat_basic.ipynb  elevenlabs_speech_basic.ipynb  hf_chat_basic.ipynb  nvidia_chat_basic.ipynb  nvidia_chat_structured_output.ipynb  nvidia_embeddings_basic.ipynb  openai_audio_basic.ipynb  openai_chat_basic.ipynb  openai_chat_structured_output.ipynb  openai_embeddings_basic.ipynb
cookbook/vectorstores/: chroma_openai_embeddings.ipynb  chroma_sentencetransformers_all-MiniLM-L6-v2.ipynb  postgres_sentencetransformers_all-MiniLM-L6-v2.ipynb
dapr_agents/: __init__.py  hooks.py
dapr_agents/agent/: __init__.py  base.py
dapr_agents/agents/: __init__.py  base.py  components.py  configs.py  durable.py  memory_store.py  prompting.py  schemas.py  standalone.py  storage.py
dapr_agents/config/: __init__.py  base.py
dapr_agents/document/: __init__.py
dapr_agents/executors/: __init__.py  base.py  docker.py  local.py  sandbox.py
dapr_agents/llm/: __init__.py  base.py  chat.py
dapr_agents/memory/: __init__.py  base.py  daprstatestore.py  liststore.py  vectorstore.py
dapr_agents/messaging/: __init__.py  base.py  dapr.py  parser.py  router.py
development/: index.html
docs/: index.md  local-development-quickstart.md  local-development-summary.md  local-development.md
examples/: README.md  README_streaming.md  comprehensive_dapr_llm_testing.py  dapr_streaming_example.py  dapr_workflow_agent_example.py  tool_calling_development_status.py
examples/02-standalone-agent-tool-call/: README.md  agent_tools.py  pyproject.toml  standalone_agent_with_vectorstore.py  standalone_weather_agent_dapr.py  standalone_weather_agent_hf.py  standalone_weather_agent_nv.py  standalone_weather_agent_openai.py  standalone_weather_agent_tracing.py
examples/02-standalone-agent-tool-call/resources/: agentstatestore.yaml  historystore.yaml  messagepubsub.yaml  workflowstatestore.yaml
quickstarts/: 01_llm_client.py  02_agent_llm.py  02_durable_agent.yaml  02_durable_agent_trigger.py  02_durable_agent_trigger_within_workflow.py  02_durable_agent_workflow.py  02_durable_agent_workflow_trigger.py  03_agent_llm_tools.py  03_durable_agent_http.py  04_agent_mcp_tools.py  04_durable_agent_pubsub.py  05_agent_memory.py  05_workflow_agents.yaml  06_durable_agent_http.py  06_durable_agent_tracing.py  06_expert_agent.py  06_triage_agent.py  06_workflow_agents.py  06_workflow_agents.yaml  07_durable_agent_hot_reload.py  07_durable_agent_pubsub.py  07_durable_agent_tracing.py  08_durable_agent_hot_reload.py  08_workflow_llm.py  09_expert_agent.py  09_triage_agent.py  09_workflow_agents.py  09_workflow_agents.yaml  11_durable_agent_hot_reload.py  README.md  function_tools.py  mcp_dapr_workflow.py  mcp_dapr_workflow_multi.py  mcp_tools.py  pyproject.toml  resolve_env_templates.py  validate.sh  weather_mcp_server.py  weather_mcp_server_2.py
quickstarts/02-llm-call-elevenlabs/: README.md  pyproject.toml  requirements.txt
quickstarts/03-durable-agent-tool-call/: README.md  agent_tools.py  durable_multi_tool_agent_dapr.py  durable_weather_agent.py  durable_weather_agent_dapr.py  durable_weather_agent_hf.py  durable_weather_agent_nv.py  durable_weather_agent_openai.py  durable_weather_agent_serve.py  durable_weather_agent_subscribe.py  durable_weather_agent_tracing.py  pyproject.toml  requirements.txt
quickstarts/03-durable-agent-tool-call/components/: statestore.yaml
quickstarts/03-standalone-agent-tool-call/: README.md  agent_tools.py  pyproject.toml  requirements.txt  standalone_weather_agent_dapr.py  standalone_weather_agent_hf.py  standalone_weather_agent_tracing.py  weather_agent.py  weather_agent_dapr.py  weather_agent_hf.py  weather_agent_nv.py  weather_agent_tracing.py  weather_durable_agent_tracing.py
quickstarts/03-standalone-agent-tool-call/components/: agentstatestore.yaml
quickstarts/09-agents-as-activities-observability/: README.md  expander_agent.py  extractor_agent.py  planner_agent.py  pyproject.toml  sequential.yaml  sequential_workflow.py  sequential_workflow_multi_model_tracing.py  sequential_workflow_tracing.py
scripts/: check_schema_compat.py  generate_metadata_schema.py
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_basic.py  test_random_orchestrator.py  test_signal_handlers.py  test_types.py
tools/: run_dapr_dev.py  setup_env.py  setup_test_infrastructure.py  validate_quickstarts.py  verify_local_dev.py
(+1253 files in other folders)
