#
# Copyright 2026 The Dapr Authors
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[project]
name = "02-standalone-agent-tool-call"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "arize-phoenix>=12.16.0",
    "arize-phoenix-otel>=0.12.1",
    "dapr-agents[vectorstore]",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=4.1.0",
    "pytz>=2024.1.0",
]

[tool.uv.sources]
dapr-agents = { workspace = true }
