[project]
name = "03-durable-agent-tool-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "arize-phoenix-otel>=0.12.0,<0.13.0",
    "dapr-agents",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
dapr-agents = { workspace = true }
