[project]
name = "09-agents-as-activities-observability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "arize-phoenix>=12.16.0",
    "dapr-agents",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
dapr-agents = { workspace = true }
